# anonymizer_guardrail

./: .gitignore  Containerfile  DEVELOPMENT.md  README.md  TASKS.md  examples.md  litellm.config.example.yaml  pyproject.toml
.github/workflows/: publish-gliner-service-image.yml  publish-image.yml  publish-pf-hf-service-image.yml  publish-pf-service-image.yml  release.yml
docs/: architecture.md  benchmark.md  cache-bench.md  configuration.md  deployment-shapes.md  deployment.md  design-decisions.md  development.md  examples.md  limitations.md  litellm-integration.md  operations.md  per-request-overrides.md  service-bench.md  surrogates.md  tools.md  vault.md
docs/benchmark/cache-bench/: report.md  results-memory.json  results-redis.json
docs/detectors/: denylist.md  gliner-pii.md  index.md  llm.md  privacy-filter.md  regex.md
fake-llm/: Containerfile  README.md  main.py  rules.example.yaml
scripts/: _lib.sh  benchmark.sh  build-image.sh  cache_bench.sh  cli.sh  detector_bench.sh  image_builder.sh  launcher.sh  menu.sh  release.sh  run_container.sh  service_bench.sh  test-examples.sh  test-overrides.sh  test-streaming-action-protocol.sh
services/fake_llm/: Containerfile  README.md  main.py  rules.example.yaml  rules.pentest.yaml
services/gliner_pii/: Containerfile  README.md  main.py
services/gliner_pii/scripts/: PROBE.md  engagement_notes.txt  probe.py
services/privacy_filter/: Containerfile  README.md  main.py
services/privacy_filter/scripts/: PROBE.md  probe.py  sample.txt  spike_opf.py
services/privacy_filter_hf/: COMPARE.md  Containerfile  README.md  main.py
src/anonymizer_guardrail/: api.py  bundled_resource.py  config.py  main.py  pipeline.py  pipeline_cache.py  pipeline_cache_memory.py  pipeline_cache_redis.py  registry.py  surrogate.py  vault.py  vault_memory.py  vault_redis.py
src/anonymizer_guardrail/detector/: __init__.py  base.py  cache.py  cache_memory.py  cache_redis.py  denylist.py  launcher.py  llm.py  privacy_filter.py  regex.py  remote_base.py  remote_gliner_pii.py  remote_privacy_filter.py  spec.py
src/anonymizer_guardrail/patterns/: regex_default.yaml  regex_pentest.yaml
src/anonymizer_guardrail/prompts/: llm_default.md  llm_default_claude.md  llm_detector.md  llm_pentest.md  llm_pentest_claude.md
tests/: _pipeline_helpers.py  conftest.py  test_config.py  test_denylist_detector.py  test_detection_cache.py  test_detector_bench.py  test_detector_cache.py  test_detector_cache_prewarm.py  test_detector_cache_redis.py  test_detector_denylist.py  test_detector_gliner_pii.py  test_detector_llm.py  test_detector_privacy_filter.py  test_detector_privacy_filter_postprocess.py  test_detector_regex.py  test_endpoint.py  test_forwarded_key.py  test_launcher_presets.py  test_launcher_runner.py  test_llm_detector.py  test_match.py  test_overrides.py  test_path_registry.py  test_pf_service_contract.py  test_pipeline.py  test_pipeline_anonymize.py  test_pipeline_cache.py  test_pipeline_cache_integration.py  test_pipeline_cache_redis.py  test_pipeline_deanonymize_substitute.py  test_pipeline_detector_mode.py  test_pipeline_failure.py  test_pipeline_merge_mode.py  test_pipeline_stats.py  test_privacy_filter.py  test_regex_yaml.py  test_remote_gliner_pii.py  test_remote_privacy_filter.py  test_service_pf_contract.py  test_surrogate_locale.py  (+3 more)
tests/corpus/: pentest.yaml
tests/streaming_e2e/: fake_llm_rules.yaml  litellm.config.yaml
tools/cache_bench/: __init__.py  __main__.py  harness.py  payloads.py  report.py
tools/detector_bench/: __init__.py  __main__.py  cli.py  corpus.py  runner.py
tools/image_builder/: main.py  menu.py  runner.py  specs.py
tools/launcher/: engine.py  main.py  menu.py  preset_loader.py  runner.py  services.py  spec_extras.py
tools/launcher/presets/: default.yaml
