[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anonymizer-guardrail"
version = "0.1.0"
description = "LiteLLM Generic Guardrail API service for round-trip anonymization."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "you" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "faker>=25.0",
    "pyyaml>=6.0",
    # Locale-aware date formatting (CLDR-backed). Used by the surrogate
    # generator to render DATE_OF_BIRTH per the configured FAKER_LOCALE.
    "babel>=2.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    # Launcher (tools/launcher/) — Click for the flag-driven CLI,
    # Textual for the interactive menu (single-screen menuconfig-
    # style UI, mirrors what scripts/launcher.sh --ui did with the bash
    # `dialog` tool), rich for status/plan rendering (color, tables,
    # NO_COLOR support). Dev-only because the launcher lives outside
    # src/ and isn't shipped in the wheel (see
    # [tool.hatch.build.targets.wheel] below). Production operators
    # install `anonymizer-guardrail` without [dev] and never see these.
    # rich is a transitive dep of Textual but listed explicitly because
    # we import it directly in the runner — pinning it here keeps the
    # contract visible.
    "click>=8.1",
    "textual>=0.50",
    "rich>=13.0",
]
# Pulls in the dependencies needed to run the local privacy-filter NER
# detector (openai/privacy-filter on HuggingFace). Heavy: torch alone is
# ~700 MB on disk plus the model weights (~3 GB at fp32). Only install
# when DETECTOR_MODE will include `privacy_filter`.
#
# `opf` (OpenAI's own inference wrapper for the privacy-filter model)
# isn't on PyPI, so we install it via VCS by pinned commit. The pin
# matches the SHA referenced in services/privacy_filter/Containerfile's
# OPF_GIT_REF — keep them in lockstep when bumping. Updating opf needs
# a `pip install --extra-index-url https://download.pytorch.org/whl/cpu`
# escape hatch on dev machines, since torch defaults to its CUDA build
# on PyPI; see TASKS.md → "opf-based Viterbi decoding" → Phase 1 for
# the recovery recipe if you hit it.
privacy-filter = [
    "torch>=2.0",
    "opf @ git+https://github.com/openai/privacy-filter@f7f00ca7fb86",
]
# Aho-Corasick backend for the denylist detector. Sub-linear in pattern
# count, pays off above a few thousand entries. Default backend stays
# regex (pure stdlib) — install this extra only when DENYLIST_BACKEND=aho.
denylist-aho = [
    "pyahocorasick>=2.0",
]

[project.scripts]
anonymizer-guardrail = "anonymizer_guardrail.main:app"

[tool.hatch.metadata]
# Required to allow VCS direct references in `[project.optional-dependencies]` —
# specifically the `opf @ git+https://github.com/openai/privacy-filter@<sha>`
# entry in the `privacy-filter` extra. opf isn't on PyPI, so VCS install is
# the only option until it ships there. Hatchling refuses these by default
# because PyPI rejects wheels carrying direct refs; we don't publish to PyPI
# (the project ships via GHCR images and `pip install -e .` from source),
# so the gate would only block our actual install paths.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anonymizer_guardrail"]
# tools/launcher/ is dev-only — explicitly left out so the wheel
# (and the production container image) doesn't carry typer /
# questionary or the launcher source. Operators install the
# launcher via `pip install -e ".[dev]"` from a checkout.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
