[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anonymizer-guardrail"
version = "0.1.0"
description = "LiteLLM Generic Guardrail API service for round-trip anonymization."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "you" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "faker>=25.0",
    "pyyaml>=6.0",
    # Locale-aware date formatting (CLDR-backed). Used by the surrogate
    # generator to render DATE_OF_BIRTH per the configured FAKER_LOCALE.
    "babel>=2.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    # In-process Redis substitute for `RedisVault` tests. Implements
    # the redis-py asyncio interface against an in-memory store, so
    # CI doesn't need a real Redis server. Pinned major version
    # because fakeredis tracks redis-py's API shape and we want to
    # know when the API drifts.
    "fakeredis>=2.20",
    # Launcher (tools/launcher/) — Click for the flag-driven CLI,
    # Textual for the interactive menu (single-screen menuconfig-
    # style UI, mirrors what scripts/launcher.sh --ui did with the bash
    # `dialog` tool), rich for status/plan rendering (color, tables,
    # NO_COLOR support). Dev-only because the launcher lives outside
    # src/ and isn't shipped in the wheel (see
    # [tool.hatch.build.targets.wheel] below). Production operators
    # install `anonymizer-guardrail` without [dev] and never see these.
    # rich is a transitive dep of Textual but listed explicitly because
    # we import it directly in the runner — pinning it here keeps the
    # contract visible.
    "click>=8.1",
    "textual>=0.50",
    "rich>=13.0",
]
# Aho-Corasick backend for the denylist detector. Sub-linear in pattern
# count, pays off above a few thousand entries. Default backend stays
# regex (pure stdlib) — install this extra only when DENYLIST_BACKEND=aho.
denylist-aho = [
    "pyahocorasick>=2.0",
]
# Redis-backed vault for multi-replica deployments. Default backend
# stays the in-memory `MemoryVault` (zero deps); operators install
# this extra when setting `VAULT_BACKEND=redis`. Bundled into the
# default container image (see Containerfile) so operators flipping
# the env var don't need to rebuild — direct-pip-install users can
# still opt out by skipping the extra.
vault-redis = [
    "redis>=5.0",
]

[project.scripts]
anonymizer-guardrail = "anonymizer_guardrail.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/anonymizer_guardrail"]
# tools/launcher/ is dev-only — explicitly left out so the wheel
# (and the production container image) doesn't carry typer /
# questionary or the launcher source. Operators install the
# launcher via `pip install -e ".[dev]"` from a checkout.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
